# mcp-gateway

./: .codecov.yml  .coderabbit.yaml  .dockerignore  .dockerignore.optimized  .env.example  .eslintrc.js  .gitignore  .last_backup  .pre-commit-config.yaml  .prettierrc.json  .prettierrc.json.backup.20260217_212636  .shellcheckrc  .uiforge-sync.json  .yarnrc.yml  ADVANCED_DOCKER_OPTIMIZATION_SUMMARY.md  ASSESSMENT_REPORT.md  CACHE_SECURITY_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONFIG_FORMAT_MIGRATION_SUMMARY.md  DOCKER_OPERATIONS_RUNBOOK.md  DOCKER_OPTIMIZATION_SUMMARY.md  Dockerfile.dribbble-mcp  Dockerfile.gateway.hardened  Dockerfile.tool-router  Dockerfile.tool-router.optimized  Dockerfile.tool-router.simple  Dockerfile.translate  Dockerfile.uiforge  Dockerfile.uiforge.consolidated  Dockerfile.uiforge.robust  FINAL_RESOLUTION_REPORT.md  FORGESPACE_CORE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LINTING_FIXES_SUMMARY.md  MCP_TOOLS_IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  Makefile  Makefile.original  NEXT_ACTIONS.md  NEXT_STEPS.md  (+59 more)
.github/: CODEOWNERS  IMPLEMENTATION_SUMMARY.md  LABEL_TEMPLATES.md  PULL_REQUEST_TEMPLATE.md  branch-protection.md  branch-protection.yml  renovate.json  renovate.yml
.husky/: commit-msg  pre-commit
apps/tool-router/: Dockerfile  coverage.json  pyproject.toml  requirements.txt
apps/tool-router/src/mcp_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/tool-router/src/tool_router/: __init__.py  __main__.py
apps/tool-router/src/tool_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/tool-router/src/tool_router/ai/: __init__.py  prompts.py  selector.py
apps/tool-router/src/tool_router/ai/tests/: __init__.py  test_prompts.py  test_selector.py
apps/tool-router/src/tool_router/api/: __init__.py  features.py  health.py  ide_config.py  lifecycle.py  rest.py
apps/tool-router/src/tool_router/api/tests/: conftest.py  test_features_api.py  test_health.py  test_ide_config.py  test_lifecycle.py  test_metrics.py  test_rest.py
apps/tool-router/src/tool_router/args/: __init__.py  builder.py
apps/tool-router/src/tool_router/core/: __init__.py  config.py  features.py  server.py
apps/tool-router/src/tool_router/core/tests/: test_features.py
apps/tool-router/src/tool_router/gateway/: __init__.py  client.py
apps/tool-router/src/tool_router/observability/: __init__.py  health.py  logger.py  metrics.py
apps/tool-router/src/tool_router/scoring/: __init__.py  matcher.py
apps/tool-router/src/tool_router/tools/: __init__.py
apps/tool-router/tests/: __init__.py
apps/tool-router/tests/integration/: __init__.py  test_end_to_end.py  test_feature_toggles.py  test_gateway_integration.py  test_virtual_servers.py
apps/tool-router/tests/unit/: __init__.py  test_ai_selector_additional.py  test_ai_selector_enhanced.py  test_args.py  test_builder.py  test_client.py  test_client_error_paths.py  test_config.py  test_core_features.py  test_core_features_fixed.py  test_features_api.py  test_gateway_client.py  test_gateway_client_enhanced.py  test_health_api.py  test_lifecycle_api.py  test_matcher.py  test_metrics_api.py  test_observability.py  test_rest_api.py  test_rest_api_additional.py  test_scoring.py  test_scoring_matcher.py  test_server.py
config/: docker-standards-checklist.yml  gateways.txt  monitoring-dashboard.yml  monitoring-production.yml  monitoring.yml  multi-cloud.yaml  resource-limits.yml  resources.txt  scaling-policies.yml  security.yaml  services.yml  sleep_settings.yml  specialist-agents.yaml  virtual-servers-enhanced.yml  virtual-servers.backup  virtual-servers.schema.json  virtual-servers.txt
data/: README.md  mcp.db.backup
docker/: Dockerfile.translate  Dockerfile.uiforge  buildkitd.toml  docker-compose.yml  entrypoint.sh  minimal_gateway.py
docs/: AI_USAGE.md  CODERABBIT_SETUP.md  CONFIG_MIGRATION.md  DEVELOPMENT.md  DOCKER_OPTIMIZATION.md  ENHANCED_CI_PIPELINE.md  ENVIRONMENT_CONFIGURATION.md  FEATURE_FLAGS.md  IDE_SETUP_GUIDE.md  MAKEFILE_GUIDE.md  MONOREPO_VS_SINGLE_REPO.md  MULTI_USER_DATABASE_CONFIG.md  NPM_DEPLOYMENT_GUIDE.md  OPERATIONAL_PROCEDURES.md  PHASE3_ADVANCED_FEATURES.md  PHASE4_MULTI_CLOUD_SUPPORT.md  PHASE_4_5_PLAN.md  PHASE_4_REVISED.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_ENHANCED.md  QUICKSTART.md  README.md  ROLLOUT_RESULTS.md  SCALABLE_ARCHITECTURE_GUIDE.md  SHARED_PACKAGE_MAINTENANCE.md  SLEEP_WAKE_ARCHITECTURE.md  SNYK_WORKFLOW_ENHANCEMENT.md  UIFORGE_MIGRATION_GUIDE.md  cicd-integration-analysis.md  forge-patterns-integration.md  phase3-command-simplification-plan.md  phase5-admin-ui-enhancements-plan.md  shared-repo-structure.md  uiforge-patterns-assessment-report.md  uiforge-patterns-integration-checklist.md  uiforge-patterns-integration-complete.md  uiforge-patterns-integration-summary.md
dribbble_mcp/: __init__.py  __main__.py  health_check.py  image_analysis.py  requirements.txt  scraper.py  screenshot.py  server.py
scripts/: README.md  advanced-monitoring.sh  ai-optimization.py  benchmark-sleep-wake-performance.py  bootstrap-project.sh  check-docker-updates.sh  check-mcp-registry.py  cleanup-duplicate-servers.sh  command-manager.py  config-manager.py  config-wizard.py  cross-cloud-load-balancer.py  cursor-mcp-wrapper.sh  deploy-production.sh  diagnose-ollama.py  diagnose_python_environment.sh  docker-monitoring-dashboard.sh  docker-optimize.sh  docker-performance-test.sh  docker-security-scan.sh  enterprise-features.py  fix-precommit.sh  gateways.txt  help.py  ide-setup.py  incident-response.sh  list-prompts.sh  list-servers.sh  load-env.sh  mcp  mcp-wrapper.sh  migrate-architecture.sh  migrate-virtual-servers.py  ml-monitoring.py  monitor-docker-resources.sh  monitoring-dashboard.sh  multi-cloud-manager.py  optimize-docker-performance.sh  predictive-scaling.py  register-gateways.sh  (+25 more)
sentry/: .env.example  README.md  docker-compose.yml  nginx.conf  setup.sh
service-manager/: Dockerfile  coverage.xml  pyproject.toml  requirements.txt  service_manager.py  service_manager_simple.py
(+397 files in other folders)
