[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gateway"
version = "1.7.0"
description = "Self-hosted MCP gateway (Context Forge) with tool-router"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "mcp-contextforge-gateway",
    "beautifulsoup4",
    "httpx",
    "lxml",
    "Pillow",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tool_router/tests", "service-manager/tests", "dribbble_mcp/tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=tool_router --cov=service_manager --cov=dribbble_mcp --cov-report=xml --cov-report=html --cov-report=term-missing --cov-fail-under=80"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "sleep_wake: marks tests related to sleep/wake functionality",
    "resource_monitoring: marks tests related to resource monitoring",
    "wake_prediction: marks tests related to wake prediction",
    "priority_management: marks tests related to priority management",
    "api_endpoints: marks tests related to API endpoints",
    "memory_optimization: marks tests related to memory optimization",
]

[tool.coverage.run]
source = ["tool_router", "service_manager", "dribbble_mcp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "*/__main__.py",
    "tool_router/server.py",
    "tool_router/gateway_client.py",
    "tool_router/scoring.py",
    "tool_router/simple_server.py",
    "tool_router/http_server.py",
    "tool_router/core/server.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["tool_router", "dribbble_mcp"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]

ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "S101",    # Use of assert detected (pytest uses assert)
    "PLR2004", # Magic value used in comparison
    "S310",    # Audit URL open (urllib is used intentionally for HTTP requests)
    "B904",    # raise from err (not always needed for simple error wrapping)
    "G004",    # Logging f-strings (acceptable for structured logging)
    "TRY401",  # Redundant exception in logging.exception (intentional for clarity)
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tool_router/tests/**/*.py" = [
    "S101",
    "ANN",
    "PLR2004",
    "ARG",
    "SIM117",
    "PT011",
    "B017",
    "PLC0415",
]
"dribbble_mcp/tests/**/*.py" = [
    "S101",
    "ANN",
    "PLR2004",
    "ARG",
    "SIM117",
    "PT011",
    "B017",
    "PLC0415",
    "PT006",
]
"tool_router/test_*.py" = [
    "S101",
    "ANN",
    "SIM117",
]
"tool_router/server.py" = [
    "PLR0911",
    "E501",
]
"tool_router/core/server.py" = [
    "PLR0911",
    "E501",
]
"tool_router/gateway/client.py" = [
    "PLC0415",
    "E501",
]
"tool_router/gateway_client.py" = [
    "PLC0415",
]
"tool_router/scoring/matcher.py" = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["tool_router", "dribbble_mcp"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
