[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gateway"
version = "1.7.0"
description = "Self-hosted MCP gateway (Context Forge) with tool-router"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "mcp-contextforge-gateway",
    "beautifulsoup4",
    "httpx",
    "lxml",
    "Pillow",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tool_router/tests", "service-manager/tests", "dribbble_mcp/tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=tool_router --cov=service_manager --cov=dribbble_mcp --cov-report=xml --cov-report=html --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["tool_router", "service_manager", "dribbble_mcp"]
omit = ["*/tests/*", "*/__pycache__/*", "*/test_*.py", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError"]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["tool_router", "dribbble_mcp"]

[tool.ruff.lint]
select = ["E","F","W","I","N","UP","ANN","ASYNC","S","BLE","B","A","C4","DTZ","T10","EM","ISC","ICN","G","PIE","T20","PT","Q","RSE","RET","SIM","TID","ARG","PTH","ERA","PD","PGH","PL","TRY","NPY","RUF"]
ignore = ["ANN401","S101","PLR2004","S310","B904","G004","TRY401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401","F403"]
"tool_router/tests/**/*.py" = ["S101","ANN","PLR2004","ARG","SIM117","PT011","B017","PLC0415"]
"dribbble_mcp/tests/**/*.py" = ["S101","ANN","PLR2004","ARG","SIM117","PT011","B017","PLC0415","PT006"]

[tool.ruff.lint.isort]
known-first-party = ["tool_router","dribbble_mcp"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
